--- a/src/main/resources/templates/basic/editForm.html
+++ b/src/main/resources/templates/basic/editForm.html
@@ -34,7 +34,7 @@
         </div>
         <div>
             <label for="quantity">수량</label>
-            <input type="text" id="quantity" name="quantity" class="form-control" value="10" th:value="${item.quantity}">
+            <input type="text" id="quantity" name="quantity" class="form-control" value="10" th:value="${item.getInteger}">
         </div>
 
         <hr class="my-4">
