--- a/src/main/resources/templates/basic/item.html
+++ b/src/main/resources/templates/basic/item.html
@@ -35,7 +35,7 @@
     </div>
     <div>
         <label for="quantity">수량</label>
-        <input type="text" id="quantity" name="quantity" class="form-control" value="10" th:value="${item.quantity}" readonly>
+        <input type="text" id="quantity" name="quantity" class="form-control" value="10" th:value="${item.getInteger}" readonly>
     </div>
 
     <hr class="my-4">
