--- a/src/main/resources/templates/basic/items.html
+++ b/src/main/resources/templates/basic/items.html
@@ -37,7 +37,7 @@
                     <td><a href="items.html" th:href="@{/basic/items/{itemId}(itemId=${item.id})}" th:text="${item.id}"> 회원 id </a></td>
                     <td><a href="items.html" th:href="@{|/basic/items/${item.id}|}" th:text="${item.itemName}"> 상품명 </a></td>
                     <td th:text="${item.price}">10000</td>
-                    <td th:text="${item.quantity}">10000</td>
+                    <td th:text="${item.getInteger}">10000</td>
                 </tr>
             </tbody>
         </table>
